--- a/web/templates/qqq.html
+++ b/web/templates/qqq.html
@@ -18,7 +18,9 @@
         <div class="logout-section" style="text-align: right; margin-bottom: 20px;">
             <button id="logout-button" class="button">登出</button>
         </div>
-
+        <div class="superuser-section" style="text-align: left; margin-bottom: 20px;">
+            <button id="superuser-button" class="button">管理使用者</button>
+        </div>
         <h2>新增題目</h2>
         <form id="add-question-form" class="form">
             <label for="unit">單元名稱:</label>
