--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1 class="centered-title">
             <img src="/static/images/logo.png" alt="Logo" class="title-image">
-            題目管理系統
+            DS管理系統
         </h1>
 
         <form id="login-form" class="form">
