--- a/web/templates/topic.html
+++ b/web/templates/topic.html
@@ -33,7 +33,7 @@
             <label for="answer">答案 :</label>
             <input type="text" id="answer" name="answer" required>
             <br>
-            <label for="answer">題目類型 :</label>
+            <label for="type">題目類型 :</label>
             <select id="type" name="type">
                 <option value="開放式問題">開放式問題</option>
                 <option value="封閉式問題">封閉式問題(有標準解答)</option>
