--- a/web/templates/graph.html
+++ b/web/templates/graph.html
@@ -122,6 +122,11 @@
                                         title: {
                                             display: true,
                                             text: '題數'
+                                        },
+                                        ticks: {
+                                            // 設置 stepSize 來確保只顯示整數刻度
+                                            stepSize: 1,
+                                            
                                         }
                                     }
                                 },
@@ -200,6 +205,11 @@
                                         title: {
                                             display: true,
                                             text: '人數' // Y 軸標題
+                                        },
+                                        ticks: {
+                                            // 設置 stepSize 來確保只顯示整數刻度
+                                            stepSize: 1,
+                                            
                                         }
                                     },
                                     x: {
