--- a/web/templates/topic.html
+++ b/web/templates/topic.html
@@ -36,7 +36,7 @@
             <label for="type">題目類型 :</label>
             <select id="type" name="type">
                 <option value="開放式問題">開放式問題</option>
-                <option value="封閉式問題">封閉式問題(有標準解答)</option>
+                <option value="封閉式問題(有標準答案)">封閉式問題(有標準答案)</option>
             </select>
             <br>
             <button type="submit" class="button">新增題目</button>
